--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 C++ "port" of Cartographer for Godot...
 
+original author: https://github.com/awkwardpolygons/cartographer
+
 Might finish it, might not.  Who knows.
 
 Update: I'll finish it, just might be slow.
